name:                gbm-server
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              David Waern
maintainer:          david.waern@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable gbm-server
  main-is:             Main.hs
  ghc-options:         -Wall -O3
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base,
                       transformers,
                       filepath,
                       directory,
                       bytestring,
                       containers,
                       text,
                       errors,
                       lens,
                       logging,
                       http-client,
                       wreq-sb,
                       xml,
                       http-types,
                       wai,
                       warp,
                       warp-tls,
                       scotty,
                       wai-extra,
                       aeson,
                       bytestring-trie
  -- hs-source-dirs:      
  default-language:    Haskell2010
