name:                gbm-server
version:             0.1.0.0
author:              David Waern
maintainer:          david.waern@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable gbm-server
  main-is:             Main.hs
  ghc-options:         -Wall -O3
  build-depends:       base,
                       transformers,
                       filepath,
                       directory,
                       bytestring,
                       containers,
                       text,
                       errors,
                       lens,
                       logging,
                       http-client,
                       wreq-sb,
                       xml,
                       http-types,
                       wai,
                       warp,
                       warp-tls,
                       scotty,
                       wai-extra,
                       aeson,
                       bytestring-trie
  default-language:    Haskell2010
